# studious

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
core/: bindings.cpp  tensor.cpp  tensor.h
lib/: bindings.cpp  casters.hpp
lib/array/: array.cpp  array.hpp  bindings.hpp  buffer.cpp  buffer.hpp
lib/bindings/: casters.hpp  dlpack.cpp  dlpack.hpp  module.cpp
lib/core/: array.cpp  array.hpp  bindings.cpp  bindings.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  devices.cpp  devices.hpp  dtype.cpp  dtype.hpp  platform.cpp  platform.hpp  types.cpp  types.hpp
lib/core/array/: array.cpp  array.hpp  numpy.cpp  numpy.hpp
lib/cpu/: array.cpp  array.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  devices.cpp  devices.hpp  dtype.hpp  read.hpp
lib/cpu/kernels/: iterate.hpp  vectorize.hpp
lib/metal/: array.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  devices.cpp  devices.hpp  devices_.cpp
lib/metal/kernels/: add_scalar.hpp  kernels.hpp  scalar.metal
studious/: __init__.py  numpy.py
studious/core/: Array.py  base.py  input.py  interpreter.py  jit.py  primitive.py  trace.py  traceable.py  types.py  util.py
studious/numpy/: __init__.py  array.py
